404 styling and Google verification

--- a/index.html
+++ b/index.html
@@ -45,6 +45,9 @@
     <meta name="msapplication-TileImage" content="/ms-icon.png">
     <meta name="msapplication-TileColor" content="#C72C48">
 
+    <!-- ## VERIFICATIONS -->
+    <meta name="google-site-verification" content="NiMugZROfww-x3-yZD5PN0ZVcahSwZJmPEhiPaN7EBE" />
+
   </head>
   <body>
 
