--- a/index.html
+++ b/index.html
@@ -3,30 +3,38 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-    <title>Clicky Media — Creating Digital Success Stories</title>
-    <meta name="description" content="DESCRIPTION">
+    <title>The Missing Raspberry | Bespoke Celebration Cakes, Winsford, Cheshire</title>
+    <meta name="description" content="The Missing Raspberry is a home bakery based in Winsford, Cheshire, specialising in birthday and wedding cakes.">
     <meta name="viewport" content="width=device-width,initial-scale=1">
-    <link rel="canonical" href="https://www.clicky.co.uk"/>
+    <link rel="canonical" href="https://www.themissingraspberry.com"/>
 
     <!-- ## ITEMPROP (http://schema.org/docs/gs.html#microdata_itemprop) ## -->
-    <meta itemprop="name" content="Clicky Media"/>
-    <meta itemprop="url" content="https://www.clicky.co.uk"/>
-    <meta itemprop="description" content="Creating Digital Success Stories"/>
+    <meta itemprop="name" content="The Missing Raspberry | Bespoke Celebration Cakes, Winsford, Cheshire"/>
+    <meta itemprop="url" content="https://www.themissingraspberry.com"/>
+    <meta itemprop="description" content="The Missing Raspberry is a home bakery based in Winsford, Cheshire, specialising in birthday and wedding cakes."/>
+    <meta itemprop="thumbnailUrl" content="http://dhco.kissr.com/images/wedding_cake.png"/>
+    <meta itemprop="image" content="http://dhco.kissr.com/images/wedding_cake.png"/>
 
     <!-- ## OPENGRAPH (http://ogp.me/) ## -->
-    <meta property="og:site_name" content="Clicky Media"/>
-    <meta property="og:title" content="Clicky Media"/>
-    <meta property="og:url" content="https://www.clicky.co.uk"/>
+    <meta property="og:site_name" content="The Missing Raspberry"/>
+    <meta property="og:title" content="The Missing Raspberry | Bespoke Celebration Cakes, Winsford, Cheshire"/>
+    <meta property="og:url" content="https://www.themissingraspberry.com"/>
     <meta property="og:type" content="website"/>
-    <meta property="og:description" content="Creating Digital Success Stories"/>
+    <meta property="og:description" content="The Missing Raspberry is a home bakery based in Winsford, Cheshire, specialising in birthday and wedding cakes."/>
+    <meta property="og:image" content="http://dhco.kissr.com/images/wedding_cake.png"/>
+    <meta property="og:image:type" content="image/jpeg" />
+    <meta property="og:image:width" content="1170"/>
+    <meta property="og:image:height" content="1170"/>
 
     <!-- ## TWITTER CARDS (https://dev.twitter.com/cards/overview) ## -->
     <meta name="twitter:card" content="summary"/>
-    <meta name="twitter:title" content="Clicky Media"/>
-    <meta name="twitter:site" content="@clickymedia" />
-    <meta name="twitter:creator" content="@clickymedia" />
-    <meta name="twitter:url" content="https://www.clicky.co.uk"/>
-    <meta name="twitter:description" content="Creating Digital Success Stories"/>
+    <meta name="twitter:title" content="The Missing Raspberry | Bespoke Celebration Cakes, Winsford, Cheshire"/>
+    <meta name="twitter:image" content="http://dhco.kissr.com/images/wedding_cake.png"/>
+    <meta name="twitter:site" content="@themissingrasp" />
+    <meta name="twitter:creator" content="@themissingrasp" />
+    <meta name="twitter:image:alt" content="The Missing Raspberry Logo"/>
+    <meta name="twitter:url" content="https://www.themissingraspberry.com"/>
+    <meta name="twitter:description" content="The Missing Raspberry is a home bakery based in Winsford, Cheshire, specialising in birthday and wedding cakes."/>
 
     <!-- ## ICONS ## -->
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
@@ -35,247 +43,52 @@
     <link rel="apple-touch-icon" sizes="180x180" href="touch-icon-iphone-retina.png">
     <link rel="apple-touch-icon" sizes="167x167" href="touch-icon-ipad-retina.png">
     <meta name="msapplication-TileImage" content="/ms-icon.png">
-    <meta name="msapplication-TileColor" content="#ce4c94">
+    <meta name="msapplication-TileColor" content="#C72C48">
 
-    <!-- ## STYLES ## -->
-    <link rel="stylesheet" href="css/normalize.css">
-    <link rel="stylesheet" href="css/custom.css">
-    <link rel="stylesheet" href="css/responsive.css">
-
-    <!-- ## JQUERY ## -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <!-- ## VERIFICATIONS -->
+    <meta name="google-site-verification" content="NiMugZROfww-x3-yZD5PN0ZVcahSwZJmPEhiPaN7EBE" />
 
   </head>
   <body>
 
-    <div class="container-sidenav">
-      <a href="#intro" class="sidenav"><div class="circle selected"></div></a>
-      <a href="#services" class="sidenav"><div class="circle"></div></a>
-      <a href="#blog" id="sidenavBlog" class="sidenav"><div class="circle"></div></a>
-      <a href="#contact" class="sidenav"><div class="circle"></div></a>
+    <div class="container-fluid">
+      <div class="row">
+        <div class="col-md-6 col-md-offset-1">
+          <div class="container-vertical">
+            <div class="middle">
+              <img src="images/tmr-logo.png" alt="The Missing Raspberry Logo" id="logo" />
+              <h1>
+                The Missing Raspberry is a small, family bakery based in Winsford, Cheshire, specialising in bespoke celebration cakes.
+              </h1>
+              <h3>
+                Whether you're looking for an elaborate, multi-tiered wedding cake, or cupcakes for afternoon tea, we can help to make your occasion special and memorable. Contact us using the options below to discuss your requirements.
+              </h3>
+              <p id="social-links">
+                <a href="mailto:jen@themissingraspberry.com"><span class="fa fa-envelope-o"></span></a>
+                <a href="https://www.facebook.com/themissingraspberry" target="_blank"><span class="fa fa-facebook"></span></a>
+                <a href="https://twitter.com/TheMissingRasp" target="_blank"><span class="fa fa-twitter"></span></a>
+                <a href="https://www.instagram.com/themissingraspberry/" target="_blank"><span class="fa fa-instagram"></span></a>
+              </p>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-3 col-md-offset-1 hidden-xs hidden-sm">
+          <div class="container-scroller"></div>
+        </div>
+      </div>
     </div>
 
-    <a id="intro"></a>
-    <section id="intro">
-      <div class="container-section">
-        <nav>
-          <ul class="nav">
-            <div class="nav-left">
-              <li class="left">
-                  <img src="images/clicky_logo.png" alt="Clicky Media Logo" />
-              </li>
-            </div>
-            <div class="mobile-nav">
-              <span id="toggleMenu">Menu</span>
-            </div>
-            <div class="nav-right">
-              <li><a href="#about">About us</a></li>
-              <li><a href="#services">Services</a></li>
-              <li><a href="#blog">Blog</a></li>
-              <li><a href="#contact">Contact us</a></li>
-              <li><a href="#contact" class="btn ">Enquire now</a></li>
-            </div>
-          </ul>
-        </nav>
+    <!-- ## FONTS ## -->
+    <!-- Google Fonts: Raleway -->
+    <link href="https://fonts.googleapis.com/css?family=Raleway:300,400,500,600,700" rel="stylesheet">
 
-        <div class="cta-container">
-          <div class="cta-arrow">
-            <img src="images/caret_left.png" class="caret" alt="Left arrow">
-          </div>
-          <!-- Carousel -->
-          <div class="carousel">
-            <div class="cta" id="cta1">
-              <h1>Creating<br>Digital Success<br>Stories.</h1>
-              <h3>Intro | Innovation | Results</h3>
-              <p>Mauris sed ipsum nisi. Aliquam eget sagittis erat. Nam ut auctor erat. Maecenas sollicitudin dignissim urna, eu elementum ante varius at. Mauris porttitorultrices mauris, eget pretium lorem blandit in. Nulla sollicitudin viverra ante sed venenatis.</p>
-              <a href="#contact" class="btn btn-solid">Enquire Now</a>
-            </div>
-            <div class="cta" id="cta2">
-              <h1>Another<br>Call to<br>Action</h1>
-              <h3>Intro | Innovation | Results</h3>
-              <p>Mauris sed ipsum nisi. Aliquam eget sagittis erat. Nam ut auctor erat. Maecenas sollicitudin dignissim urna, eu elementum ante varius at. Mauris porttitorultrices mauris, eget pretium lorem blandit in. Nulla sollicitudin viverra ante sed venenatis.</p>
-              <a href="#contact" class="btn btn-solid">Enquire Now</a>
-            </div>
-            <div class="cta" id="cta3">
-              <h1>One more<br>Call to<br>Action</h1>
-              <h3>Intro | Innovation | Results</h3>
-              <p>Mauris sed ipsum nisi. Aliquam eget sagittis erat. Nam ut auctor erat. Maecenas sollicitudin dignissim urna, eu elementum ante varius at. Mauris porttitorultrices mauris, eget pretium lorem blandit in. Nulla sollicitudin viverra ante sed venenatis.</p>
-              <a href="#contact" class="btn btn-solid">Enquire Now</a>
-            </div>
-          </div>
-          <!-- end Carousel -->
-          <div class="cta-arrow cta-right">
-            <img src="images/caret_right.png" class="caret" alt="Right arrow">
-          </div>
-        </div>
-      </div>
+    <!-- ## STYLES ## -->
+    <!-- Bootstrap Full Styles -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+    <link rel="stylesheet" href="css/custom.css">
 
-      <div class="testimonials">
-        <div class="container-section">
-          <div>
-            <p class="quote">"Mauris sed ipsum nisi. Aliquam eget sagittis erat. Nam ut auctor erat. Maecenas sollicitudin dignissim urna, eu elementum ante varius at. Mauris porttitorultrices mauris, eget pretium lorem blandit in. Nulla sollicitudin viverra ante sed venenatis."</p>
-            <p class="source">John Williams, Company Name</p>
-          </div>
-          <div>
-            <p class="quote">"Mauris sed ipsum nisi. Aliquam eget sagittis erat. Nam ut auctor erat. Maecenas sollicitudin dignissim urna, eu elementum ante varius at. Mauris porttitorultrices mauris, eget pretium lorem blandit in. Nulla sollicitudin viverra ante sed venenatis."</p>
-            <p class="source">David Hughes, Company Name</p>
-          </div>
-          <div>
-            <p class="quote">"Mauris sed ipsum nisi. Aliquam eget sagittis erat. Nam ut auctor erat. Maecenas sollicitudin dignissim urna, eu elementum ante varius at. Mauris porttitorultrices mauris, eget pretium lorem blandit in. Nulla sollicitudin viverra ante sed venenatis."</p>
-            <p class="source">Elon Musk, Company Name</p>
-          </div>
-        </div>
-      </div>
-    </section>
+    <!-- ## FONTAWESOME ## -->
+    <script src="https://use.fontawesome.com/cdb2666d40.js"></script>
 
-    <a id="services"></a>
-    <section id="services">
-      <div class="section-intro">
-        <h2>Our Services</h2>
-        <p>Vestibulum cursus lectus odio in lacinia magna consectetur</p>
-      </div>
-      <div class="container">
-        <div class="featured-service">
-          <div>
-            <h2>Service</h2>
-            <p>Lorem ipsum dolar sit amet</p>
-            <p class="action">
-              <a href="#" class="btn">Find out more</a>
-            </p>
-          </div>
-        </div>
-      </div>
-      <div class="services-grid">
-        <div class="container">
-          <img src="images/service_1_bg.png" alt="Two people working at a computer" style="width:100%">
-          <div class="centred">
-            <h2>Service</h2>
-            <p>Lorem ipsum dolar sit amet</p>
-          </div>
-        </div>
-        <div class="container">
-          <img src="images/project_1_bg.png" alt="Person working on a tablet" style="width:100%">
-          <div class="centred">
-            <h2>Project</h2>
-            <p>Lorem ipsum dolar sit amet</p>
-          </div>
-        </div>
-        <div class="container">
-          <img src="images/service_2_bg.png" alt="Woman with headset" style="width:100%">
-          <div class="centred">
-            <h2>Service</h2>
-            <p>Lorem ipsum dolar sit amet</p>
-          </div>
-        </div>
-        <div class="container">
-          <img src="images/project_1_bg.png" alt="Person working on a tablet" style="width:100%">
-          <div class="centred">
-            <h2>Project</h2>
-            <p>Lorem ipsum dolar sit amet</p>
-          </div>
-        </div>
-      </div>
-    </section>
-
-    <a id="blog"></a>
-    <section id="blog">
-      <div class="section-intro">
-        <h2>Blog</h2>
-        <p>Vestibulum cursus lectus odio in lacinia magna consectetur</p>
-      </div>
-      <div class="blog-grid">
-        <div class="container">
-          <img src="images/blog_1_bg.png" alt="Woman at work" style="width:100%">
-          <div class="top-left">
-            <p class="featured">Featured Post</p>
-          </div>
-        </div>
-        <div class="blog-container">
-          <p class="blog-title">Blog Title Number One</p>
-          <p>Vivamus dapibus semper risus sed facilisis. Fusce sollicitudin nisl id sollicitudin fermentum.</p>
-          <p class="blog-date">
-            27.05.2015
-          </p>
-          <p class="action">
-            <a href="#" class="btn ">Read more</a>
-          </p>
-        </div>
-      </div>
-      <div class="blog-grid">
-        <div class="container">
-          <img src="images/blog_2_bg.png" alt="Two people working at a computer" class="blog-img">
-        </div>
-        <div class="blog-container">
-          <p class="blog-title">Blog Title Number Two</p>
-          <p>Vivamus dapibus semper risus sed facilisis. Fusce sollicitudin nisl id sollicitudin fermentum.</p>
-          <p class="blog-date">
-            27.05.2015
-          </p>
-          <p class="action">
-            <a href="#" class="btn ">Read more</a>
-          </p>
-        </div>
-        <div class="container">
-          <img src="images/blog_3_bg.png" alt="Woman with headset" class="blog-img">
-        </div>
-        <div  class="blog-container">
-          <p class="blog-title">Blog Title Number Three</p>
-          <p>Vivamus dapibus semper risus sed facilisis. Fusce sollicitudin nisl id sollicitudin fermentum.</p>
-          <p class="blog-date">
-            27.05.2015
-          </p>
-          <p class="action">
-            <a href="#" class="btn ">Read more</a>
-          </p>
-        </div>
-      </div>
-    </section>
-
-    <a id="contact"></a>
-    <section id="contact">
-      <div class="container-section">
-        <h2>Contact Us</h2>
-        <div class="contact-wording">
-          <p>Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptus himenaeos. Vestibulum a mauris nec tortor porta scelerisque id eu nisl</p>
-          <p>Open from 09.00am - 5.30pm Monday to Friday</p>
-        </div>
-        <div class="contact-options">
-          <p>
-            <img src="images/contact_pin.png" alt="Map pin icon">
-            <span><a href="https://www.google.co.uk/maps/place/Clicky+Media/@53.1901677,-2.8856904,15z/data=!4m5!3m4!1s0x0:0xb2688f56014b9e06!8m2!3d53.1901677!4d-2.8856904?sa=X&ved=0ahUKEwjbt6bHpfbZAhWrw6YKHV7nA9gQ_BIIhgEwDQ" target="_blank">View our location on a map</a></span>
-          </p>
-          <p>
-            <img src="images/contact_phone.png" alt="Phone icon">
-            <span>Call us today: <a href="tel:01234567890">01234 567 890</a></span>
-          </p>
-          <p>
-            <img src="images/contact_mail.png" alt="Email icon">
-            <span>Email us: <a href="mailto:hello@clicky.co.uk">hello@clicky.co.uk</a></span>
-          </p>
-        </div>
-        <form class="enquiry-form" action="index.html" method="post">
-          <input type="text" name="name" placeholder="FULL NAME" />
-          <input type="text" name="email" placeholder="EMAIL ADDRESS" />
-          <input type="tel" name="phone" placeholder="CONTACT NUMBER" />
-          <button type="submit" name="submit" class="btn btn-solid">Enquire Now</button>
-        </form>
-      </div>
-    </section>
-
-    <footer>
-      <div class="container-section">
-        <div class="services-grid">
-          <div class="footer-left">
-            Copyright Clicky Media 2015 | <a href="#">Sitemap</a> | <a href="#">Privacy Policy</a>
-          </div>
-          <div class=footer-right>
-            Website Design &amp; Development by Clicky Media
-          </div>
-        </div>
-      </div>
-    </footer>
-
-    <!-- JavaScript -->
-    <script src="js/custom.js"></script>
   </body>
 </html>
